# viz

./: .gitignore  README.md  pyproject.toml
apps/hardconcrete/: __init__.py  app.py
apps/hardconcrete/assets/: slider.css
apps/maxvis/: app.py  sparsemax.py
apps/maxvis/assets/: style.css
apps/strong_convex_stability/: app.py
